Changing use of Double Constructor do Static Factory
It may improve Performance and Memory usage